# astro_game

./: .gitignore  CMakeLists.txt  README.md
source/: engine.cpp  engine.hh  main.cpp  main_types.hpp  vector2.hpp
source/animations/: animation.cpp  animation.hh  animations_typedef.hpp
source/components/: component.cpp  component.hh  components_typedef.hpp
source/components/sprite/: animated_sprite_component.cpp  animated_sprite_component.hh  scrolling_sprite_component.cpp  scrolling_sprite_component.hh  sprite_component.cpp  sprite_component.hh  sprite_manager.cpp  sprite_manager.hh  sprite_typedef.hpp
source/environments/: environment.cpp  environment.hh  environments_typedef.hpp  game.cpp  game.hh
source/game_objects/: game_object.cpp  game_object.hh  game_objects_manager.cpp  game_objects_manager.hh  game_objects_typedef.hpp  ship.cpp  ship.hh
source/game_objects/exceptions/: game_object_creation_exception.cpp  game_object_creation_exception.hh
source/math_plus/: math.hpp
source/textures/: scrolling_texture.cpp  scrolling_texture.hh  texture.cpp  texture.hh  texture_manager.cpp  texture_manager.hh  textures_typedef.hpp
